Fix background scroll issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,13 @@ body::-webkit-scrollbar {
 /* Prevent scroll when modal is open on ios */
 body.modal-open {
   overflow-y: hidden;
+  position: fixed;
+  -webkit-overflow-scrolling: auto;
   touch-action: none;
   -ms-touch-action: none;
 }
 
 .touch-scroll {
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   -webkit-overflow-scrolling: touch;
 }
